--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>我的主页</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- ...你的样式... -->
   <style>
-    /* 你的样式可以复制你现有的，不影响功能 */
+    /* 你现有的样式这里省略，可以直接保留 */
     body {
       background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
       min-height: 100vh;
